# dictate

./: .gitignore  Dictate.command  LICENSE  README.md  daemon.sh  dashboard.py  dictate.py  pyproject.toml  smoke.py  suggest_terms.py  terms.example.txt  webwindow.py
